Feature/Vas-11619-12559-12560 : Fixes & tests