@@ -3,11 +3,11 @@ package fr.gouv.vitamui.cas.provider;
 import fr.gouv.vitamui.cas.util.Utils;
 import fr.gouv.vitamui.commons.api.identity.ServerIdentityAutoConfiguration;
 import fr.gouv.vitamui.commons.rest.client.ExternalHttpContext;
-import fr.gouv.vitamui.iam.common.dto.common.ProviderEmbeddedOptions;
-import fr.gouv.vitamui.iam.external.client.IdentityProviderExternalRestClient;
 import fr.gouv.vitamui.iam.common.dto.IdentityProviderDto;
+import fr.gouv.vitamui.iam.common.dto.common.ProviderEmbeddedOptions;
 import fr.gouv.vitamui.iam.common.utils.IdentityProviderHelper;
 import fr.gouv.vitamui.iam.common.utils.Pac4jClientBuilder;
+import fr.gouv.vitamui.iam.external.client.IdentityProviderExternalRestClient;
 import lombok.val;
 import org.junit.Before;
 import org.junit.Test;
@@ -19,15 +19,21 @@ import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 /**
  * Tests {@link ProvidersService}.
- *
- *
  */
 @RunWith(SpringRunner.class)
 @ContextConfiguration(classes = ServerIdentityAutoConfiguration.class)
@@ -36,6 +42,7 @@ public final class ProvidersServiceTest {
 
     private static final String PROVIDER_ID = "company";
     private static final String ERROR_MESSAGE = "errorMessage";
+    private static final String CUSTOMER_ID = "customerId";
 
     private ProvidersService service;
 
@@ -58,7 +65,8 @@ public final class ProvidersServiceTest {
         provider = new IdentityProviderDto();
         provider.setId(PROVIDER_ID);
         provider.setInternal(true);
-        provider.setPatterns(Arrays.asList(".*@company.com"));
+        provider.setPatterns(List.of(".*@company.com"));
+        provider.setCustomerId(CUSTOMER_ID);
 
         saml2Client = new SAML2Client();
         saml2Client.setName("testSAML2Client");
@@ -70,14 +78,18 @@ public final class ProvidersServiceTest {
     @Test
     public void testGetProviders() {
 
-        when(restClient.getAll(any(ExternalHttpContext.class), eq(Optional.empty()), eq(Optional.of(ProviderEmbeddedOptions.KEYSTORE + "," + ProviderEmbeddedOptions.IDPMETADATA)))).thenReturn(Arrays.asList(provider));
+        when(restClient.getAll(any(ExternalHttpContext.class), eq(Optional.empty()),
+            eq(Optional.of(ProviderEmbeddedOptions.KEYSTORE + "," + ProviderEmbeddedOptions.IDPMETADATA))))
+            .thenReturn(Arrays.asList(provider));
 
         service.loadData();
 
-        val missingProvider = identityProviderHelper.findByUserIdentifier(service.getProviders(), "jerome@vitamui.com");
+        val missingProvider = identityProviderHelper.findByUserIdentifierAndCustomerId(
+            service.getProviders(), "user1@vitamui.com", CUSTOMER_ID);
         assertFalse(missingProvider.isPresent());
 
-        val userProvider = identityProviderHelper.findByUserIdentifier(service.getProviders(), "jerome@company.com");
+        val userProvider = identityProviderHelper.findByUserIdentifierAndCustomerId(
+            service.getProviders(), "user1@company.com", CUSTOMER_ID);
         assertTrue(userProvider.isPresent());
         assertEquals(PROVIDER_ID, userProvider.get().getId());
         assertEquals(saml2Client, ((Pac4jClientIdentityProviderDto) userProvider.get()).getClient());
@@ -92,7 +104,9 @@ public final class ProvidersServiceTest {
     @Test
     public void testNoProviderResponse() {
 
-        when(restClient.getAll(any(ExternalHttpContext.class), eq(Optional.empty()), eq(Optional.of(ProviderEmbeddedOptions.KEYSTORE + "," + ProviderEmbeddedOptions.IDPMETADATA)))).thenReturn(null);
+        when(restClient.getAll(any(ExternalHttpContext.class), eq(Optional.empty()),
+            eq(Optional.of(ProviderEmbeddedOptions.KEYSTORE + "," + ProviderEmbeddedOptions.IDPMETADATA)))).thenReturn(
+            null);
         try {
             service.loadData();
             fail("should fail");
@@ -104,7 +118,9 @@ public final class ProvidersServiceTest {
     @Test
     public void testBadProviderResponse() {
 
-        when(restClient.getAll(any(ExternalHttpContext.class), eq(Optional.empty()), eq(Optional.of(ProviderEmbeddedOptions.KEYSTORE + "," + ProviderEmbeddedOptions.IDPMETADATA)))).thenThrow(new RuntimeException(ERROR_MESSAGE));
+        when(restClient.getAll(any(ExternalHttpContext.class), eq(Optional.empty()),
+            eq(Optional.of(ProviderEmbeddedOptions.KEYSTORE + "," + ProviderEmbeddedOptions.IDPMETADATA)))).thenThrow(
+            new RuntimeException(ERROR_MESSAGE));
 
         try {
             service.loadData();
